[package]
name = "solbridge-master-contract"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.6.4"
thiserror = "1.0"
borsh = "0.8.2"
bs58 = "0.4.0"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.6.4"
solana-sdk = "1.6.4"
tokio = { version = "1.3.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
